         - added: 'cop-bypass' and 'cop-is-bypassed' commands added
         - added: 'c-is-muted' and 'c-is-bypassed' commands
         - changed: new params to 'c-mute' and 'c-bypass'
         - changed: pyeca - now requires python 2.4 or newer; fixes
                    sfbug:3059303 
         - changed: removed ecasound.spec file from distribution
         - fixed: resample, commas in filenames not handled correctly
         - fixed: bug in map-ladspa-list output, param names not
                  printed out correctly
         - fixed: bug in RIFF header generation, incorrect chunk
                  size
         - fixed: bug in saving jack input/output params
         - fixed: seeks with -kf did not work, sfbug:2013828
         - fixed: seeks with -kog did not work, sfbug:2013824
         - fixed: sndfile, seeking beyond end-of-file for inputs
         - fixed: regression with stop+start and -z:db
22052011 (v2.8.1) -** stable release **-
	 - fixed: jack_multi did not work correctly when connecting
	          to a single port
         - fixed: bugfix to mp3/ogg/aac output
11052011 (v2.8.0) -** stable release **-
	 - note: NEWS format changed, see 01012011 meta entry below
	 - changed: do not use deprecated  jack_client_new() 
	 - changed: simplified signal handling for not-so-POSIX
	            platforms 
	 - fixed: seeks with -klg did not work
	 - fixed: bug in int-float conversions
	 - fixed: some false DBC warnings removed
	 - fixed: bug in setting jack_multi channel count
	 - fixed: bug in signal handling caused rubyecasound scripts
 	          to fail (e.g. ecasound's own stresstest.rb)
	 - fixed: at end of playback, properly wait until all buffered
	          samples have been played out to ALSA devices
	 - fixed: bug with live seeks and -z:db buffering; caused 
	   	  problems to e.g. JACK transport slaving and 
		  live seeks (repositioning without stopping transport)
01012011 meta: notes on provided change information in this file